listing header z-index issue resolved

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7950,7 +7950,7 @@ input[type=checkbox].custom-checkbox:before {
   .preview-header {
     position: fixed;
     width: 100%;
-    z-index: 10;
+    z-index: 11;
   }
   .preview-header.active {
     top: 0;
